2010-02-11  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/43012
	* gcc.dg/graphite/pr43012.c: New.

2010-02-11  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/42930
	* g++.dg/graphite/pr42930.C: New.

2010-02-11  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/42914
	PR middle-end/42530
	* gcc.dg/graphite/pr42530.c: New.
	* gcc.dg/graphite/pr42914.c: New.

2010-02-11  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/42771
	* gcc.dg/graphite/pr42771.c: New.

2010-02-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/42998
	* gcc.c-torture/compile/pr42998.c: New testcase.

2010-02-10  Jason Merrill  <jason@redhat.com>

	PR c++/41896
	* g++.dg/cpp0x/lambda/lambda-nested3.C: New.

	PR c++/42983, core issue 906
	* g++.dg/cpp0x/defaulted15.C: Add virtualness test.
	* g++.dg/cpp0x/defaulted9.C: Move virtual default outside class.

	PR c++/43016
	* g++.dg/cpp0x/lambda/lambda-conv.C: Test for weakness.

2010-02-10  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43017
	* gcc.dg/torture/pr43017.c: New testcase.

2010-02-10  Tobias Burnus <burnus@net-b.de>

	PR fortran/40823
	* gfortran.dg/private_type_1.f90: Update error location.
	* gfortran.dg/invalid_interface_assignment.f90: Ditto.
	* gfortran.dg/typebound_operator_2.f03: Ditto.
	* gfortran.dg/assignment_2.f90: Ditto.
	* gfortran.dg/redefined_intrinsic_assignment.f90: Ditto.
	* gfortran.dg/binding_label_tests_9.f03: Ditto.

2010-02-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/43015
	* gfortran.dg/bind_c_usage_20.f90: New test.

2010-02-10  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43010
	* g++.dg/debug/pr43010.C: New test.

2010-02-10  Richard Guenther  <rguenther@suse.de>

	PR c/43007
	* gcc.c-torture/execute/20100209-1.c: New testcase.
	* gcc.dg/fold-div-3.c: Likewise.

2010-02-10  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/builtin-ffs-1.c: New test.

2010-02-09  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/42999